namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: website-istio-ns
  labels:
    name: website-istio-ns
    istio-injection: enabled
